--- a/news.html
+++ b/news.html
@@ -5,10 +5,10 @@
 
 <ul class="topnav">
 
-  <li><a href="/index.html">Home</a></li>
-  <li><a class="active" href="/news.html">News</a></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a class="active" href="news.html">News</a></li>
   <li class="right"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
-  <li><a href="/aboutme.html">About Me</a></li>
+  <li><a href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
   
 </ul>
@@ -80,7 +80,7 @@ ul.topnav {
 
 ul.topnav li {float: left;}
 
-ul.topnav li a, div {
+ul.topnav li a,div {
   display: block;
   color: white;
   text-align: center;
