--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
 
 <p class="page">
 
-This is my Portfolio Website
+this is my Portfolio
+
 
 </p>
+
+
+
 
 </body>
 
 <script>
+
 
  //version update
   fetch('assets/version.txt')  
@@ -57,7 +62,6 @@ This is my Portfolio Website
   });
 
 
-
 </script>
 
 <style>
@@ -68,7 +72,7 @@ This is my Portfolio Website
     padding-right: 10px;
 }
 
-body {margin: 0}
+body {margin: 0;}
 
 ul.topnav {
   list-style-type: none;
@@ -80,7 +84,7 @@ ul.topnav {
 
 ul.topnav li {float: left;}
 
-ul.topnav li a, div {
+ul.topnav li a, li div {
   display: block;
   color: white;
   text-align: center;
