--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ ul.topnav li a, li div {
 
 ul.topnav li a:hover:not(.active) {background-color: #111;}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+ul.topnav li a.active {background-color: #d7e819; color: black}
+
+ul.topnav li.theme {background-color: #106a71; }
 
 ul.topnav li.right {float: right;}
 
