--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
 
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="news.html">News</a></li>
-  <li class="right"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
+  <li class="right theme"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
   <li><a href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
   
@@ -91,14 +91,16 @@ ul.topnav li a, li div {
   padding: 14px 16px;
   text-decoration: none;
 }
-
+  
 
 
 ul.topnav li a:hover:not(.active) {background-color: #111;}
 
-ul.topnav li a.active {background-color: #04AA6D;}
+ul.topnav li a.active {background-color: #d7e819; color: black}
 
 ul.topnav li.right {float: right;}
+
+ul.topnav li.theme {background-color: #106a71; }
 
 @media screen and (max-width: 600px) {
   ul.topnav li.right, 
@@ -132,3 +134,4 @@ color:blue
 
 
 </style>
+
