colour changes fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="news.html">News</a></li>
-  <li class="right"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
+  <li class="right theme"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
   <li><a href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
   
