--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
   <li class="right theme"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
   <li><a class="active" href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
+  <li><a href="contactme.html">Contact Me</a></li>
   
 </ul>
 
@@ -18,9 +19,9 @@
 <body>
 
 <p class="page">
-  I am
-  <span id="age"></span>
-  years old (updates live)
+  I am <span id="age"></span> years old (updates live)
+<br>
+
 
 </p>
 
