--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <li class="right theme"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
   <li><a href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
-  
+  <li><a href="contactme.html">Contact Me</a></li>
 </ul>
 
 </head>
@@ -20,6 +20,10 @@
 <p class="page">
 
 this is my Portfolio
+
+<br>
+
+currently under development, come back soon for changes!
 
 
 </p>
