--- a/contactme.html
+++ b/contactme.html
@@ -22,7 +22,7 @@
 </p>
 
 <form action="https://formsubmit.co/anselbizznes@gmail.com" method="POST">
-    <h2>Contact Us</h2>
+    <h2>Leave me a message</h2>
 
     <label for="name">Name</label>
     <input type="text" id="name" name="name" required>
