--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
   <li><a class="active" href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
   <li><a href="contactme.html">Contact Me</a></li>
-  
+  <li><a href="projects.html">My Projects</a></li>
 </ul>
 
 </head>
