--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <li><a href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
   <li><a href="contactme.html">Contact Me</a></li>
+  <li><a href="projects.html">My Projects</a></li>
+  
 </ul>
 
 </head>
@@ -24,6 +26,10 @@ this is my Portfolio
 <br>
 
 currently under development, come back soon for changes!
+
+<br>
+
+also please submit your comments and requests under the contact me page
 
 
 </p>
