--- a/news.html
+++ b/news.html
@@ -11,6 +11,7 @@
   <li><a href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
   <li><a href="contactme.html">Contact Me</a></li>
+  <li><a href="projects.html">My Projects</a></li>
 </ul>
 
 </head>
