--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
   <li class="right theme"><a href="javascript:window.location.reload();" id="theme-toggle">Theme</a></li>
   <li><a href="aboutme.html">About Me</a></li>
   <li class="right"><div id="version"></div></li>
-  <li><a class="active" href="contactme.html">Contact Me</a></li>
-  <li><a href="projects.html">My Projects</a></li>
+  <li><a href="contactme.html">Contact Me</a></li>
+  <li><a class="active" href="projects.html">My Projects</a></li>
 </ul>
 
 </head>
@@ -20,29 +20,17 @@
 
 <p class="page">
 
+i am currently working on some things
+
+<br>
+
+
+
+
 </p>
 
-<form action="https://formsubmit.co/anselbizznes@gmail.com" method="POST">
-    <h2>Leave me a message</h2>
 
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
 
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="phone">Phone</label>
-    <input type="tel" id="phone" name="phone">
-
-    <label for="message">Message</label>
-    <textarea id="message" name="message" required></textarea>
-
-    <!-- Redirect to thank you page -->
-    <input type="hidden" name="_next" value="index.html">
-    <!-- Optional: disable captcha -->
-
-    <button type="submit">Send Message</button>
-  </form>
 
 </body>
 
@@ -83,36 +71,10 @@
 
 <style>
 
-h1 {
-  text-align: center;
-  margin: 35px 0 20px 0;
-}
-
-
-form {
-  width: 300px;
-  margin: 50px auto;
-  font-family: Arial, sans-serif;
-}
-input, button {
-  width: 100%;
-  padding: 10px;
-  margin-top: 8px;
-}
-button {
-  background: #0078ff;
-  border: none;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-}
-button:hover {
-  background: #005fcc;
-}
-
 .page {
-  padding-left: 10px;
-  padding-right: 10px;
+
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 body {margin: 0;}
@@ -134,16 +96,16 @@ ul.topnav li a, li div {
   padding: 14px 16px;
   text-decoration: none;
 }
-  
+
 
 
 ul.topnav li a:hover:not(.active) {background-color: #111;}
 
 ul.topnav li a.active {background-color: #d7e819; color: black}
 
-ul.topnav li.right {float: right;}
-
 ul.topnav li.theme {background-color: #106a71; }
+
+ul.topnav li.right {float: right;}
 
 @media screen and (max-width: 600px) {
   ul.topnav li.right, 
@@ -177,4 +139,3 @@ color:blue
 
 
 </style>
-
