--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+<link rel="stylesheet" href="assets/main.css">
+
 <ul class="topnav">
 
   <li><a class="active" href="index.html">Home</a></li>
@@ -73,74 +75,3 @@ also please submit your comments and requests under the contact me page
 
 
 </script>
-
-<style>
-
-.page {
-
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-body {margin: 0;}
-
-ul.topnav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-ul.topnav li {float: left;}
-
-ul.topnav li a, li div {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-
-
-ul.topnav li a:hover:not(.active) {background-color: #111;}
-
-ul.topnav li a.active {background-color: #d7e819; color: black}
-
-ul.topnav li.theme {background-color: #106a71; }
-
-ul.topnav li.right {float: right;}
-
-@media screen and (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
-}
-
-
-body {
-  background: white;
-  color: black;
-}
-
-body.dark-mode {
-  background: #121212;
-  color: white;
-}
-
-h1 {
-  color: black
-}
-
-body.dark-mode h1 {
-  color: white
-}
-
-a {
-
-color:blue
-
-}
-
-
-</style>
