--- a/news.html
+++ b/news.html
@@ -26,6 +26,37 @@ lots of exiting things are happening right now :)
 
 </p>
 
+<div class="news">
+  <div>
+
+    <div class="newsheader">New amazing Product!</div>
+    <div class="newsphara">today i am at the goverment bilding</div>
+    <img class="newsimage" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Government_Buildings%2C_Dublin%2C_Ireland.jpg" height="200"></a>
+
+  </div>
+
+</div>
+
+<div class="news">
+  <div>
+
+    <div class="newsheader">
+      My Website is LIVE!
+    </div>
+    <div class="newsphara">
+
+      Thanks to my amazing coding skills and the large amount of people supporting me, this website that i've spent months on finally works!
+      I'm so glad that everybody is supporting me because i have not done anything during that time
+      oh wait nobody cares so i just wasted my time
+      <br>
+      <br>
+      i would like to  thank my family for supporting me and letting me work on my website
+
+    </div>
+  </div>
+
+</div>
+
 </body>
 
 <script>
