--- a/news.html
+++ b/news.html
@@ -22,39 +22,31 @@
 
 <p class="page">
 
-lots of exiting things are happening right now :)
+
+
+<marquee scrollamount="20" direction="left"><marquee direction="down" scrollamount="2" height="100"><h1>lots of exiting things are happening right now :)</h1></marquee></marquee>
 
 </p>
 
 <div class="news">
   <div>
-
-    <div class="newsheader">New amazing Product!</div>
-    <div class="newsphara">today i am at the goverment bilding</div>
-    <img class="newsimage" src="https://upload.wikimedia.org/wikipedia/commons/2/23/Government_Buildings%2C_Dublin%2C_Ireland.jpg" height="200"></a>
-
+    <div class="newsheader">New video uploaded!</div>
+    <iframe width="479" height="851" src="https://www.youtube.com/embed/CTlxVn_n9-E" title="Hidden Features on a old iPod nano #iPod #apple #tech #cool #fyp #everdodd #gaming #ipodgames" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
-
 </div>
 
 <div class="news">
   <div>
-
     <div class="newsheader">
-      My Website is LIVE!
+      my website is LIVE!!!!
     </div>
     <div class="newsphara">
-
       Thanks to my amazing coding skills and the large amount of people supporting me, this website that i've spent months on finally works!
       I'm so glad that everybody is supporting me because i have not done anything during that time
-      oh wait nobody cares so i just wasted my time
-      <br>
-      <br>
+      oh wait nobody cares so i just wasted my time<br><br>
       i would like to  thank my family for supporting me and letting me work on my website 
-
     </div>
   </div>
-
 </div>
 
 </body>
