--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@
 
 <script>
 
-
+  alert("AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA")
  //version update
   fetch('assets/version.txt')  
     .then(response => response.text())
