wow im gonna eat you

--- a/news.html
+++ b/news.html
@@ -48,6 +48,19 @@
   </div>
 </div>
 
+<div class="news">
+<div>
+<div class="newsheader">
+wow!
+</div>
+<div class="newsphara">
+im gonna eat you
+</div>
+</div>
+
+</div>
+
+
 </body>
 
 <script>
