--- a/news.html
+++ b/news.html
@@ -23,21 +23,24 @@
 <p class="page">
 
 
-<marquee scrollamount="20" direction="left"><marquee direction="down" scrollamount="2" height="100"><h1>lots of exiting things are happening right now :)</h1></marquee></marquee>
-
+<marquee scrollamount="10" direction="up"><h1>lots of exiting things are happening right now :)</h1></marquee>
 </p>
 
 <div class="news">
   <div>
     <div class="newsheader">New video uploaded!</div>
-    <iframe width="479" height="851" src="https://www.youtube.com/embed/CTlxVn_n9-E" title="Hidden Features on a old iPod nano #iPod #apple #tech #cool #fyp #everdodd #gaming #ipodgames" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="newsphara">
+      <a href="https://www.youtube.com/watch/CTlxVn_n9-E" class="newslink">Click here to go to the video</a>
+      <br><br>
+      we have spent lots of long hours on this video so please like and subscribe 🙏
+    </div>
   </div>
 </div>
 
 <div class="news">
   <div>
     <div class="newsheader">
-      my website is LIVE!!!!
+      New video upload -- We played GTA on an iPod!!
     </div>
     <div class="newsphara">
       Thanks to my amazing coding skills and the large amount of people supporting me, this website that i've spent months on finally works!
