--- a/index.html
+++ b/index.html
@@ -23,16 +23,7 @@
 
 <p class="page">
 
-this is my Portfolio
-
-<br>
-
-currently under development, come back soon for changes!
-
-<br>
-
-also please submit your comments and requests under the contact me page
-
+nothing to see here
 
 </p>
 
